--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
   		<figure class="banner">
-  			<img src="Ramos.jpg" alt="political candidate" width="500px">
+  			<img src="images/Ramos.jpg" alt="political candidate" width="500px">
   			<figcaption> <a href="https://www.nysenate.gov/senators/jessica-ramos"> Jessica Ramos nysenate.gov  </a> </figcaption>
   		</figure>
 
